// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHelpers should convert graph data and generate tooltips when usage is populated: usage populated 1`] = `
Array [
  Object {
    "label": "56 sockets on Jun 1",
    "x": "Jun 1",
    "y": 56,
  },
  Object {
    "label": "30 sockets on Jun 2
 -26 from previous day",
    "x": "Jun 2",
    "y": 30,
  },
  Object {
    "label": "40 sockets on Jun 3
 +10 from previous day",
    "x": "Jun 3",
    "y": 40,
  },
]
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if usage is empty: zeroed array 1`] = `
Array [
  Object {
    "x": "Jun 1",
    "y": "0",
  },
  Object {
    "x": "Jun 2",
    "y": "0",
  },
  Object {
    "x": "Jun 3",
    "y": "0",
  },
  Object {
    "x": "Jun 4",
    "y": "0",
  },
  Object {
    "x": "Jun 5",
    "y": "0",
  },
]
`;

exports[`GraphHelpers should convert graph data and returned zeroed array when usage throws error: throws error 1`] = `
Array [
  Object {
    "x": "Jun 1",
    "y": "0",
  },
  Object {
    "x": "Jun 2",
    "y": "0",
  },
  Object {
    "x": "Jun 3",
    "y": "0",
  },
  Object {
    "x": "Jun 4",
    "y": "0",
  },
  Object {
    "x": "Jun 5",
    "y": "0",
  },
]
`;

exports[`GraphHelpers should have specific functions: graphHelpers 1`] = `
Object {
  "chartDateFormat": "MMM D",
  "convertGraphData": [Function],
  "getGraphHeight": [Function],
  "getTooltipDimensions": [Function],
  "getTooltipFontSize": [Function],
  "zeroedUsageData": [Function],
}
`;

exports[`GraphHelpers should match graph heights at all breakpoints: lg graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: md graph height 1`] = `400`;

exports[`GraphHelpers should match graph heights at all breakpoints: sm graph height 1`] = `400`;

exports[`GraphHelpers should match graph heights at all breakpoints: xl graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: xl2 graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: xs graph height 1`] = `400`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: lg tooltip dimensions 1`] = `
Object {
  "height": 40,
  "width": 120,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: md tooltip dimensions 1`] = `
Object {
  "height": 40,
  "width": 140,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: sm tooltip dimensions 1`] = `
Object {
  "height": 50,
  "width": 180,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xl tooltip dimensions 1`] = `
Object {
  "height": 30,
  "width": 90,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xl2 tooltip dimensions 1`] = `
Object {
  "height": 20,
  "width": 80,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xs tooltip dimensions 1`] = `
Object {
  "height": 60,
  "width": 200,
}
`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: lg tooltip font sizes 1`] = `12`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: md tooltip font sizes 1`] = `14`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: sm tooltip font sizes 1`] = `14`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xl tooltip font sizes 1`] = `8`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xl2 tooltip font sizes 1`] = `8`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xs tooltip font sizes 1`] = `14`;
